# flight-control

./: .coverage  .coveragerc  .gitignore  .gitmodules  AGENTS.md  automation_toolkit.py  basic_tutorial_1.py  basic_tutorial_2.py  basic_tutorial_3.py  basic_tutorial_4.py  log.md  pyproject.toml  pytest.ini  requirements.txt  state_transition_documentation.md
camera/: camera_controller.py  led_dictionaries.py
controllers/: barcode_scanner.py  finite_state_machine.py  flight_control_fsm.py  logging.py  logitech_webcam.py  phidget_board.py  unified_controller.py
docs/: README.md  device_markdown_map.md  granular_model_of_testing.md  model_of_system.md
hardware/: barcode_scanner.py  basic_tutorial_1.py  phidget_controller.py  phidget_io_controller.py
install/offline_packages/: hidapi-0.14.0.post4-cp312-cp312-macosx_11_0_arm64.whl  pyobjc-11.1-py3-none-any.whl  (+11 more)
scripts/: basic_tutorial_4.py  basic_tutorial_5.py  basic_tutorial_6.py  basic_tutorial_7.py  camera_feed_test.py  crashguard.py  enroll_all_users.py  state_machine_test.py  stress_loop_test.py  stress_loop_testing.py
tests/: .coverage  test_automation_toolkit.py  test_barcode_scanner.py  test_enroll_script.py  test_finite_state_machine.py  test_fsm_logic.py  test_fsm_systematic.py  test_logging.py  test_logitech_webcam_controller.py  test_phidget_controller.py  test_pin_generator.py  test_unified_controller.py
tools/: calibrate_rois.py  camera_feed_test.py  configuration_console.py  generate_fsm_diagram.py  hsv_checker.py
utils/: device_properties.json  led_states.py  logging_config.py  pin_generator.py
(+9 files in other folders)
